fixing wrapping issue in nav
also some small formatting

--- a/resources/public/css/screen.css
+++ b/resources/public/css/screen.css
@@ -41,6 +41,7 @@ body {
     width: 1160px;
 }
 .navigation {
+    white-space:nowrap;
     position: relative;
     padding: 20px 0px 0px 20px;
 }
